--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
             ></use>
           </svg>
         </button>
-        <nav class="menu-navigation">
-          <ul class="menu-list list">
-            <li class="menu-item list">
-              <a href="./index.html" class="menu-link link">Studio</a>
-            </li>
-            <li class="menu-item list">
-              <a href="./portfolio.html" class="menu-link link">Portfolio</a>
-            </li>
-            <li class="menu-item list">
-              <a href="" class="menu-link link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
+        <ul class="menu-list list">
+          <li class="menu-item list">
+            <a href="./index.html" class="menu-link menu-studio-link link"
+              >Studio</a
+            >
+          </li>
+          <li class="menu-item list">
+            <a href="./portfolio.html" class="menu-link link">Portfolio</a>
+          </li>
+          <li class="menu-item list">
+            <a href="" class="menu-link link">Contacts</a>
+          </li>
+        </ul>
         <address class="menu-address">
           <div class="container-menu-address">
             <ul class="menu-address-list list">
